src/z80asm/z80asm2/t/30-directive/expected/defl_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/defl_11.asm
Assembling t/30-directive/input/defl_11.asm...
t/30-directive/input/defl_11.asm:1:6: error: Expected macro name after DEFL
    #defl ; no name
         ^
t/30-directive/input/defl_11.asm:2:8: error: DEFL macro cannot be function-like
    #defl X(p1) ; cannot be function macro
           ^
t/30-directive/input/defl_11.asm:4:7: error: DEFL cannot redefine function-like macro: Y
    #defl Y ; cannot redefine function macro
          ^
t/30-directive/input/defl_11.asm:3:9: note: Previous definition
    #define Y(p1)
            ^
# file: t/30-directive/input/defl_11.asm
EndOfLine	"\n"	5:1	
# file: t/30-directive/input/defl_11.asm
Identifier	"DEFINE"	3:9	keyword=DEFINE 
Identifier	"Y"	3:9	
LeftParen	"("	3:9	
Identifier	"p1"	3:9	
RightParen	")"	3:9	
EQ	"="	3:9	
Integer	"1"	3:14	int_value=1 
